<resources>
    <string name="app_name">FoodMoodFinder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="desc_logo">Appllication Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_empty_email">Email tidak boleh kosong!</string>
    <string name="error_empty_password">Password tidak boleh kosong!</string>
    <string name="error_empty_confirm_password">Konfirmasi password anda!</string>
    <string name="error_password_not_match">Password tidak sesuai!</string>
    <string name="error_password_length">Password minimal 6 karakter!</string>
    <string name="greeting">Halo, %1$s !</string>
    <string name="feature_unavailable">Maaf, fitur ini masih dalam tahap pengembangan.</string>
    <string name="home_greeting">Mau makan apa hari ini?</string>
    <string name="guest">Guest</string>
    <string name="title_favorite_fragment">Daftar Favorit</string>
    <string name="title_detail">Detail Makanan</string>
    <string name="today_recommendation">Rekomendasi Hari Ini</string>
    <string name="title_questionnaire">Bingung nih!</string>
    <string name="food_name">Nama Makanan</string>
    <string name="calories">Kalori</string>
    <string name="find_food_in_google">Cari makanan di Google</string>
    <string name="profile_name">Profile Name</string>
    <string name="carbohydrate">Karbohidrat</string>
    <string name="protein">Protein</string>
    <string name="vegetable">Pakai sayur?</string>
    <string name="cooking">Pengolahan</string>
    <string name="title_result">Rekomendasi Makanan</string>
    <string name="empty_favorite">Daftar Favorit masih Kosong!</string>
    <string name="empty_favorite_desc">Tambahkan makanan favoritmu dengan menekan icon ❤ pada Makanan!</string>
    <string name="back_button">Back Button</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="placeholder">Placeholder</string>
    <string name="food_picture">Food Picture</string>
    <string name="register_your_account">Daftarkan Akun Anda</string>
    <string name="please_login">Silahkan Masuk</string>
    <string name="carbohydrate_questionnaire">Mau Karbohidrat Apa?</string>
    <string name="carb_value_0">Beras dan Olahannya</string>
    <string name="carb_value_2">Tepung, Mie, dan Pasta</string>
    <string name="carb_value_1">Lainnya</string>
    <string name="carb_value_3">Tidak ada</string>
    <string name="next">Next Question</string>
    <string name="protein_questionnaire">Mau Protein Apa?</string>
    <string name="protein_value_0">Ayam dan Daging</string>
    <string name="protein_value_1">Ikan dan Seafood</string>
    <string name="protein_value_3">Tahu, Tempe, dan Telur</string>
    <string name="protein_value_2">Lainnya</string>
    <string name="protein_value_4">Tidak Ada</string>
    <string name="cooking_questionnaire">Mau masakan seperti apa?</string>
    <string name="cooking_value_0">Goreng atau Tumis</string>
    <string name="cooking_value_2">Panggang atau Bakar</string>
    <string name="cooking_value_3">Rebus atau Kukus</string>
    <string name="cooking_value_1">Lainnya</string>
    <string name="veggie_questionnaire">Mau pakai Sayuran?</string>
    <string name="veggie_value_1">Ya</string>
    <string name="veggie_value_0">Tidak</string>
    <string name="remove_favorite">Remove Favorite</string>


</resources>